# web-eval-agent

./: Dockerfile  INSTRUCTIONS.md  INTEGRATION_README.md  PR_ANALYSIS_IMPLEMENTATION.md  README.md  TEST_RESULTS.md  ai-analysis-test.md  codemod_analysis.json  codemod_analyzer.py  comprehensive-homepage-analysis.html  debug-report.html  debug_agent_steps.py  demo-detailed-report.txt  demo-summary-report.txt  demo-verbose-report.txt  demo_report_generator.py  demo_reports.py  docker-compose.yml  dynamic_response_results.json  dynamic_response_results.py  gemini_test_results.txt  install.sh  proper-web-eval-report.html  pyproject-new.toml  pyproject.toml  pytest.ini  real-test-report.html  requirements-new.txt  requirements.txt  run_tests.py  setup.py  simple-navigation-test.md  simple-test-report.html  simple-test.md  simple_codemod_analyzer.py  simple_test.md  smithery.yaml  test-report.html  test_dynamic_response_evaluation.py  test_gemini_integration.py  (+5 more)
backend/: __init__.py  api_server.py  pr_analysis_pipeline.py  requirements.txt
cloudflare/: webhook-gateway.js  wrangler.toml
config/: environment.template
examples/: demo_structured_report.py
examples/reports/: ai-powered-report.html  ai-powered-test.html  comprehensive-test.html  quick-test.html  web-eval-report.html
examples/test_instructions/: simple-test.md
reports/: demo-structured-report.txt  test-report.txt  web_eval_report_20250801_142830.json
src/: browser_manager.py  browser_pool.py  browser_utils.py  cli.py  config.py  coverage_analyzer.py  enhanced_executor.py  flask_socketio.py  instruction_parser.py  log_server.py  logging_config.py  reporter.py  scout_agent.py  screeninfo.py  session_manager.py  test_executor.py  tool_handlers.py  utils.py
src/ai/: validation_engine.py
src/cli/: enhanced_cli.py
src/config/: enhanced_config.py
tests/: README.md  TESTING_GUIDE.md  __main__.py  conftest.py  run_comprehensive_test.py  run_tests.py  simple_test.py  test_100_percent_effectiveness.py  test_api_server.py  test_google.py  test_improved_ssh.py  test_minimal_ssh.py  test_pr_analysis_pipeline.py  test_ssh_demo.py
webEvalAgent/: dummy.json  mcp_server.py
web_eval/: __init__.py  __main__.py  cli.py  config.py  instruction_parser.py  reporter.py  test_executor.py
web_eval_agent/: __init__.py
(+97 files in other folders)
