[project]
name = "web-eval-agent"
version = "2.0.0"
description = "AI-powered web application testing and validation tool"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Web Eval Agent Team", email = "support@webeval.dev"}
]
license = {text = "MIT"}
keywords = ["web", "testing", "automation", "ai", "browser", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "browser-use==0.1.40",
    "google-genai>=1.7.0",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.21",
    "langchain-google-genai>=2.0.10",
    "playwright>=1.41.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "click>=8.1.8",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.3",
    "markdownify>=0.14.1",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.9",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
web-eval = "web_eval_agent.core.cli:main"

[project.urls]
Homepage = "https://github.com/Zeeeepa/web-eval-agent"
Repository = "https://github.com/Zeeeepa/web-eval-agent"
Issues = "https://github.com/Zeeeepa/web-eval-agent/issues"
Documentation = "https://github.com/Zeeeepa/web-eval-agent#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["web_eval_agent*"]

[tool.setuptools.package-data]
web_eval_agent = ["templates/**/*", "examples/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501", "B008", "B904"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
